[metadata]
name = x-django-app
version = 0.1
description = A Django app to conduct Web-based x-django-app.
long_description = file: README.md
url = https://github.com/XecusM/x-django-app
author = Mohamed Aboel-fotouh
author_email = abo.elfotouh@live.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
